# Hebbia-Financial-Analyst

./: .dockerignore  Dockerfile  HEBBIA_RESEARCH.md  README.md  pyproject.toml  requirements.txt  serve.py  vercel.json
data/bench/: questions.json  results.json
data/web/: AMZN.json  COKE.json  COST.json  KHC.json  NFLX.json  NVDA.json  qoe_AMZN.json  qoe_CRM.json  qoe_KR.json  qoe_MSFT.json  qoe_NFLX.json
public/: index.html
public/api/: grid.json
public/api/qoe/: AMZN.json  MSFT.json  NVDA.json  companies.json
public/api/sources/: AMZN.json  MSFT.json  NVDA.json
scripts/: build_static.py  run_bench.py  run_grid.py  run_qoe.py  serve_static.py  test_agent.py
src/tieout/: ontology.py
src/tieout/agent/: __init__.py  column.py  orchestrator.py  verify.py
src/tieout/bench/: __init__.py  grade.py  run.py
src/tieout/evals/: __init__.py  grid.py  metrics.py
src/tieout/ingest/: edgar.py
src/tieout/synth/: __init__.py  adapters.py  constraints.py  generate.py  holdings.py  hris.py  ipf.py  validate.py
src/tieout/web/: __init__.py  __main__.py  app.py  runlog.py  service.py
src/tieout/web/static/: index.html
src/tieout/workflows/: __init__.py  ask.py  catalog.py  qoe.py
